@@ -27,6 +27,7 @@ unicode characters are present.
 +Add some missing JavaScript keywords (patch from Rudi Pettazzi)
 +Fix groups not being expanded on a regex replace action.
 +Fix Cmd+Shift+Left/Right not selecting line on osx.
++Fix Comment command not working on Latex documents
 
 #-----------------------------------------------------------------------------#
 
